--- a/Simple QR Code Maker/Views/DecodingPage.xaml
+++ b/Simple QR Code Maker/Views/DecodingPage.xaml
@@ -50,38 +50,40 @@
             MinZoomFactor="1"
             VerticalScrollBarVisibility="Auto"
             ZoomMode="Enabled">
-            <GridView
-                Width="{x:Bind ImageScrollViewer.ViewportWidth, Mode=OneWay}"
-                Height="{x:Bind ImageScrollViewer.ViewportHeight, Mode=OneWay}"
-                ItemsSource="{x:Bind ViewModel.DecodingImageItems, Mode=OneWay}"
-                SelectionMode="None">
-                <GridView.ItemTemplate>
-                    <DataTemplate x:DataType="models:DecodingImageItem">
-                        <Grid>
-                            <Viewbox Grid.Row="1">
-                                <Grid>
-                                    <Image x:Name="ImageWithBarcodes" Source="{x:Bind BitmapImage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                                    <ItemsControl ItemsSource="{x:Bind CodeBorders, Mode=OneWay}">
-                                        <ItemsControl.ItemsPanel>
-                                            <ItemsPanelTemplate>
-                                                <Canvas
-                                                    Width="{Binding ImageWithBarcodes.Width, Mode=OneWay}"
-                                                    Height="{Binding ImageWithBarcodes.Height, Mode=OneWay}"
-                                                    Background="Transparent" />
-                                            </ItemsPanelTemplate>
-                                        </ItemsControl.ItemsPanel>
-                                        <ItemsControl.ItemTemplate>
-                                            <DataTemplate>
-                                                <ContentControl />
-                                            </DataTemplate>
-                                        </ItemsControl.ItemTemplate>
-                                    </ItemsControl>
-                                </Grid>
-                            </Viewbox>
-                        </Grid>
-                    </DataTemplate>
-                </GridView.ItemTemplate>
-            </GridView>
+            <Grid Width="{x:Bind ImageScrollViewer.ViewportWidth, Mode=OneWay}" Height="{x:Bind ImageScrollViewer.ViewportHeight, Mode=OneWay}">
+                <GridView
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    ItemsSource="{x:Bind ViewModel.DecodingImageItems, Mode=OneWay}"
+                    SelectionMode="None">
+                    <GridView.ItemTemplate>
+                        <DataTemplate x:DataType="models:DecodingImageItem">
+                            <Grid>
+                                <Viewbox>
+                                    <Grid>
+                                        <Image x:Name="ImageWithBarcodes" Source="{x:Bind BitmapImage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                        <ItemsControl ItemsSource="{x:Bind CodeBorders, Mode=OneWay}">
+                                            <ItemsControl.ItemsPanel>
+                                                <ItemsPanelTemplate>
+                                                    <Canvas
+                                                        Width="{Binding ImageWithBarcodes.Width}"
+                                                        Height="{Binding ImageWithBarcodes.Height}"
+                                                        Background="Transparent" />
+                                                </ItemsPanelTemplate>
+                                            </ItemsControl.ItemsPanel>
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate>
+                                                    <ContentControl />
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                        </ItemsControl>
+                                    </Grid>
+                                </Viewbox>
+                            </Grid>
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                </GridView>
+            </Grid>
         </ScrollViewer>
         <InfoBar
             x:Name="QrCodeInfoBar"
