--- a/Simple QR Code Maker/Views/DecodingPage.xaml
+++ b/Simple QR Code Maker/Views/DecodingPage.xaml
@@ -52,6 +52,8 @@
             ZoomMode="Enabled">
             <Grid Width="{x:Bind ImageScrollViewer.ViewportWidth, Mode=OneWay}" Height="{x:Bind ImageScrollViewer.ViewportHeight, Mode=OneWay}">
                 <GridView
+                    ScrollViewer.IsHorizontalScrollChainingEnabled="True"
+                    ScrollViewer.IsVerticalScrollChainingEnabled="True"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     ItemsSource="{x:Bind ViewModel.DecodingImageItems, Mode=OneWay}"
