--- a/Simple QR Code Maker/Views/MainPage.xaml
+++ b/Simple QR Code Maker/Views/MainPage.xaml
@@ -19,154 +19,191 @@
         </Style>
     </Page.Resources>
 
-    <Grid>
-        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-            <StackPanel
-                Margin="20"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Orientation="Vertical"
-                Spacing="12">
-                <TextBox
-                    x:Name="UrlTextBox"
-                    MinWidth="300"
-                    MaxWidth="800"
-                    AcceptsReturn="True"
-                    PlaceholderText="ex: http://example.com/"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    Text="{x:Bind ViewModel.UrlText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    TextWrapping="NoWrap" />
+    <SplitView
+        DisplayMode="Overlay"
+        IsPaneOpen="{x:Bind ViewModel.IsHistoryPaneOpen, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+        OpenPaneLength="400"
+        PanePlacement="Right">
+        <SplitView.Content>
+            <Grid>
+                <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                    <StackPanel
+                        Margin="20"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Orientation="Vertical"
+                        Spacing="12">
+                        <TextBox
+                            x:Name="UrlTextBox"
+                            MinWidth="300"
+                            MaxWidth="800"
+                            AcceptsReturn="True"
+                            PlaceholderText="ex: http://example.com/"
+                            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                            Text="{x:Bind ViewModel.UrlText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            TextWrapping="NoWrap" />
 
-                <StackPanel
-                    x:Name="QrCodeOptions"
-                    HorizontalAlignment="Center"
-                    Orientation="Horizontal"
-                    Spacing="12"
-                    Visibility="{x:Bind ViewModel.CanSaveImage, Mode=OneWay, Converter={StaticResource BoolToVisibility}}">
-                    <Button Width="68" ToolTipService.ToolTip="Code Color">
-                        <Button.Flyout>
-                            <Flyout>
-                                <ColorPicker
-                                    x:Name="ForegroundColorPicker"
-                                    ColorSpectrumShape="Ring"
-                                    IsAlphaEnabled="False"
-                                    IsMoreButtonVisible="True"
-                                    Color="{x:Bind ViewModel.ForegroundColor, Mode=TwoWay}" />
-                            </Flyout>
-                        </Button.Flyout>
-                        <Button.Content>
-                            <Rectangle
-                                Width="12"
-                                Height="12"
-                                Fill="{x:Bind ForegroundColorPicker.Color, Mode=OneWay, Converter={StaticResource ColorToBrush}}" />
-                        </Button.Content>
-                    </Button>
-                    <Button Width="68" ToolTipService.ToolTip="Background Color">
-                        <Button.Flyout>
-                            <Flyout>
-                                <ColorPicker
-                                    x:Name="BackgroundColorPicker"
-                                    ColorSpectrumShape="Ring"
-                                    IsAlphaEnabled="False"
-                                    IsMoreButtonVisible="True"
-                                    Color="{x:Bind ViewModel.BackgroundColor, Mode=TwoWay}" />
-                            </Flyout>
-                        </Button.Flyout>
-                        <Button.Content>
-                            <Rectangle
-                                Width="12"
-                                Height="12"
-                                Fill="{x:Bind BackgroundColorPicker.Color, Mode=OneWay, Converter={StaticResource ColorToBrush}}" />
-                        </Button.Content>
-                    </Button>
-                    <ComboBox
-                        x:Name="ErrorCorrectionComboBox"
-                        Width="136"
-                        ItemsSource="{x:Bind ViewModel.ErrorCorrectionLevels}"
-                        SelectedItem="{x:Bind ViewModel.SelectedOption, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                        ToolTipService.ToolTip="Level of Error Correction">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate x:DataType="models:ErrorCorrectionOptions">
-                                <TextBlock Text="{x:Bind Description}" />
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
-                </StackPanel>
+                        <StackPanel
+                            x:Name="QrCodeOptions"
+                            HorizontalAlignment="Center"
+                            Orientation="Horizontal"
+                            Spacing="12"
+                            Visibility="{x:Bind ViewModel.CanSaveImage, Mode=OneWay, Converter={StaticResource BoolToVisibility}}">
+                            <Button Width="68" ToolTipService.ToolTip="Code Color">
+                                <Button.Flyout>
+                                    <Flyout>
+                                        <ColorPicker
+                                            x:Name="ForegroundColorPicker"
+                                            ColorSpectrumShape="Ring"
+                                            IsAlphaEnabled="False"
+                                            IsMoreButtonVisible="True"
+                                            Color="{x:Bind ViewModel.ForegroundColor, Mode=TwoWay}" />
+                                    </Flyout>
+                                </Button.Flyout>
+                                <Button.Content>
+                                    <Rectangle
+                                        Width="12"
+                                        Height="12"
+                                        Fill="{x:Bind ForegroundColorPicker.Color, Mode=OneWay, Converter={StaticResource ColorToBrush}}" />
+                                </Button.Content>
+                            </Button>
+                            <Button Width="68" ToolTipService.ToolTip="Background Color">
+                                <Button.Flyout>
+                                    <Flyout>
+                                        <ColorPicker
+                                            x:Name="BackgroundColorPicker"
+                                            ColorSpectrumShape="Ring"
+                                            IsAlphaEnabled="False"
+                                            IsMoreButtonVisible="True"
+                                            Color="{x:Bind ViewModel.BackgroundColor, Mode=TwoWay}" />
+                                    </Flyout>
+                                </Button.Flyout>
+                                <Button.Content>
+                                    <Rectangle
+                                        Width="12"
+                                        Height="12"
+                                        Fill="{x:Bind BackgroundColorPicker.Color, Mode=OneWay, Converter={StaticResource ColorToBrush}}" />
+                                </Button.Content>
+                            </Button>
+                            <ComboBox
+                                x:Name="ErrorCorrectionComboBox"
+                                Width="136"
+                                ItemsSource="{x:Bind ViewModel.ErrorCorrectionLevels}"
+                                SelectedItem="{x:Bind ViewModel.SelectedOption, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                ToolTipService.ToolTip="Level of Error Correction">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate x:DataType="models:ErrorCorrectionOptions">
+                                        <TextBlock Text="{x:Bind Description}" />
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                        </StackPanel>
 
-                <Border
-                    MinWidth="300"
-                    MinHeight="300"
-                    HorizontalAlignment="Center"
-                    Background="{ThemeResource CardBackgroundFillColorSecondaryBrush}"
-                    CornerRadius="4">
-                    <GridView
-                        x:Name="ListOfCodes"
-                        Margin="0"
-                        Padding="2,2,0,0"
-                        ItemsSource="{x:Bind ViewModel.QrCodeBitmaps, Mode=OneWay}"
-                        ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                        ScrollViewer.VerticalScrollBarVisibility="Auto">
-                        <GridView.ItemTemplate>
-                            <DataTemplate x:DataType="models:BarcodeImageItem">
-                                <Grid
-                                    Margin="4"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center">
-                                    <Image
-                                        x:Name="QrCodeImage"
-                                        Width="285"
-                                        Height="285"
-                                        CanDrag="True"
-                                        Source="{x:Bind CodeAsBitmap}"
-                                        ToolTipService.ToolTip="{x:Bind CodeAsText}" />
-                                    <InfoBar
-                                        IsOpen="{x:Bind CodeAsText, Converter={StaticResource HasNoURL}}"
-                                        Message="QR Code not a URL"
-                                        Severity="Warning" />
-                                </Grid>
-                            </DataTemplate>
-                        </GridView.ItemTemplate>
-                    </GridView>
-                </Border>
+                        <Border
+                            MinWidth="300"
+                            MinHeight="300"
+                            HorizontalAlignment="Center"
+                            Background="{ThemeResource CardBackgroundFillColorSecondaryBrush}"
+                            CornerRadius="4">
+                            <GridView
+                                x:Name="ListOfCodes"
+                                Margin="0"
+                                Padding="2,2,0,0"
+                                ItemsSource="{x:Bind ViewModel.QrCodeBitmaps, Mode=OneWay}"
+                                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                ScrollViewer.VerticalScrollBarVisibility="Auto">
+                                <GridView.ItemTemplate>
+                                    <DataTemplate x:DataType="models:BarcodeImageItem">
+                                        <Grid
+                                            Margin="4"
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center">
+                                            <Image
+                                                x:Name="QrCodeImage"
+                                                Width="285"
+                                                Height="285"
+                                                CanDrag="True"
+                                                Source="{x:Bind CodeAsBitmap}"
+                                                ToolTipService.ToolTip="{x:Bind CodeAsText}" />
+                                            <InfoBar
+                                                IsOpen="{x:Bind CodeAsText, Converter={StaticResource HasNoURL}}"
+                                                Message="QR Code not a URL"
+                                                Severity="Warning" />
+                                        </Grid>
+                                    </DataTemplate>
+                                </GridView.ItemTemplate>
+                            </GridView>
+                        </Border>
 
-                <StackPanel
-                    HorizontalAlignment="Center"
-                    Orientation="Horizontal"
-                    Spacing="10">
-                    <Button
-                        x:Name="SavePngButton"
-                        Command="{x:Bind ViewModel.SavePngCommand}"
-                        Content="Save PNG..."
-                        IsEnabled="{x:Bind ViewModel.CanSaveImage, Mode=OneWay}"
-                        ToolTipService.ToolTip="Save code(s) as PNG files" />
-                    <Button
-                        x:Name="SaveSvgButton"
-                        Command="{x:Bind ViewModel.SaveSvgCommand}"
-                        Content="Save SVG..."
-                        IsEnabled="{x:Bind ViewModel.CanSaveImage, Mode=OneWay}"
-                        ToolTipService.ToolTip="Save code(s) as SVG files" />
-                    <Button Command="{x:Bind ViewModel.OpenFileCommand}" ToolTipService.ToolTip="Open an image to read and extract text from any codes">
-                        <Viewbox Height="16">
-                            <SymbolIcon Symbol="OpenFile" />
-                        </Viewbox>
-                    </Button>
-                    <Button Command="{x:Bind ViewModel.GoToSettingsCommand}" ToolTipService.ToolTip="Simple QR Code Maker Settings">
-                        <Viewbox Height="16">
-                            <SymbolIcon Symbol="Setting" />
-                        </Viewbox>
-                    </Button>
-                </StackPanel>
+                        <StackPanel
+                            HorizontalAlignment="Center"
+                            Orientation="Horizontal"
+                            Spacing="10">
+                            <Button
+                                x:Name="SavePngButton"
+                                Command="{x:Bind ViewModel.SavePngCommand}"
+                                Content="Save PNG..."
+                                IsEnabled="{x:Bind ViewModel.CanSaveImage, Mode=OneWay}"
+                                ToolTipService.ToolTip="Save code(s) as PNG files" />
+                            <Button
+                                x:Name="SaveSvgButton"
+                                Command="{x:Bind ViewModel.SaveSvgCommand}"
+                                Content="Save SVG..."
+                                IsEnabled="{x:Bind ViewModel.CanSaveImage, Mode=OneWay}"
+                                ToolTipService.ToolTip="Save code(s) as SVG files" />
+                            <Button Command="{x:Bind ViewModel.OpenFileCommand}" ToolTipService.ToolTip="Open an image to read and extract text from any codes">
+                                <Viewbox Height="16">
+                                    <SymbolIcon Symbol="OpenFile" />
+                                </Viewbox>
+                            </Button>
+                            <Button Command="{x:Bind ViewModel.GoToSettingsCommand}" ToolTipService.ToolTip="Simple QR Code Maker Settings">
+                                <Viewbox Height="16">
+                                    <SymbolIcon Symbol="Setting" />
+                                </Viewbox>
+                            </Button>
+                        </StackPanel>
 
-                <InfoBar
-                    x:Name="LenghErrorInfoBar"
-                    Title="Error generating the QR Code"
-                    Margin="20"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Bottom"
-                    IsOpen="{x:Bind ViewModel.ShowLengthError, Mode=OneWay}"
-                    Severity="Error" />
-            </StackPanel>
-        </ScrollViewer>
+                        <InfoBar
+                            x:Name="LenghErrorInfoBar"
+                            Title="Error generating the QR Code"
+                            Margin="20"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Bottom"
+                            IsOpen="{x:Bind ViewModel.ShowLengthError, Mode=OneWay}"
+                            Severity="Error" />
+                    </StackPanel>
+                </ScrollViewer>
+                <AppBarButton
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Command="{x:Bind ViewModel.ToggleHistoryPaneOpenCommand}"
+                    IsCompact="True">
+                    <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE81C;" />
+                </AppBarButton>
 
-    </Grid>
+            </Grid>
+        </SplitView.Content>
+        <SplitView.Pane>
+            <Grid Padding="24,12">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <TextBlock Style="{StaticResource SubtitleTextBlockStyle}" Text="History" />
+                <ListView
+                    Grid.Row="1"
+                    ItemsSource="{x:Bind ViewModel.HistoryItems}"
+                    SelectedItem="{x:Bind ViewModel.SelectedHistoryItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:HistoryItem">
+                            <Grid>
+                                <TextBlock Text="{x:Bind CodesContent}" TextTrimming="WordEllipsis" />
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+        </SplitView.Pane>
+    </SplitView>
 </Page>
