--- a/Simple QR Code Maker/Views/MainPage.xaml
+++ b/Simple QR Code Maker/Views/MainPage.xaml
@@ -174,6 +174,12 @@
                     </StackPanel>
                 </ScrollViewer>
                 <AppBarButton
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Command="{x:Bind ViewModel.GoToMoreInfoCommand}"
+                    Icon="Library"
+                    IsCompact="True" />
+                <AppBarButton
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
                     Command="{x:Bind ViewModel.ToggleHistoryPaneOpenCommand}"
