--- a/Simple QR Code Maker/Views/AboutQrCodesWebPage.xaml
+++ b/Simple QR Code Maker/Views/AboutQrCodesWebPage.xaml
@@ -8,35 +8,11 @@
 
     <Grid x:Name="ContentArea">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <WebView2 x:Name="WebView" Source="{x:Bind ViewModel.Source, Mode=OneWay}" />
-
-        <StackPanel
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Visibility="{x:Bind ViewModel.IsLoading, Mode=OneWay}">
-            <ProgressRing IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" />
-            <TextBlock x:Uid="WebView_Loading" />
-        </StackPanel>
-
-        <StackPanel
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Visibility="{x:Bind ViewModel.HasFailures, Mode=OneWay}">
-            <TextBlock
-                x:Uid="WebView_FailedMessage"
-                HorizontalAlignment="Center"
-                TextWrapping="WrapWholeWords" />
-            <HyperlinkButton
-                x:Uid="WebView_Reload"
-                HorizontalAlignment="Center"
-                Command="{x:Bind ViewModel.ReloadCommand}" />
-        </StackPanel>
-
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="0">
             <StackPanel Orientation="Horizontal">
                 <Button
                     Margin="{StaticResource XSmallLeftTopRightBottomMargin}"
@@ -77,5 +53,34 @@
                 </Button>
             </StackPanel>
         </Grid>
+        
+        <WebView2
+            x:Name="WebView"
+            Grid.Row="1"
+            Source="{x:Bind ViewModel.Source, Mode=OneWay}" />
+
+        <StackPanel
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Visibility="{x:Bind ViewModel.IsLoading, Mode=OneWay}">
+            <ProgressRing IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" />
+            <TextBlock x:Uid="WebView_Loading" />
+        </StackPanel>
+
+        <StackPanel
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Visibility="{x:Bind ViewModel.HasFailures, Mode=OneWay}">
+            <TextBlock
+                x:Uid="WebView_FailedMessage"
+                HorizontalAlignment="Center"
+                TextWrapping="WrapWholeWords" />
+            <HyperlinkButton
+                x:Uid="WebView_Reload"
+                HorizontalAlignment="Center"
+                Command="{x:Bind ViewModel.ReloadCommand}" />
+        </StackPanel>
     </Grid>
 </Page>
