--- a/Simple QR Code Maker/Views/SettingsPage.xaml
+++ b/Simple QR Code Maker/Views/SettingsPage.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Spacing="12">
-            <AppBarButton Command="{x:Bind ViewModel.GoBackCommand}" Icon="Back" />
+            <AppBarButton Command="{x:Bind ViewModel.GoHomeCommand}" Icon="Back" />
             <TextBlock
                 x:Uid="Settings_Title"
                 Grid.Row="0"
@@ -78,7 +78,10 @@
                     <HyperlinkButton x:Uid="SettingsPage_PrivacyTermsLink" Margin="{StaticResource SettingsPageHyperlinkButtonMargin}" />
                 </StackPanel>
 
-                <HyperlinkButton Margin="-12,0,0,0" Command="{x:Bind ViewModel.GoToMoreInfoCommand}">
+                <HyperlinkButton
+                    Margin="-12,0,0,0"
+                    Command="{x:Bind ViewModel.GoToMoreInfoCommand}"
+                    ToolTipService.ToolTip="Learn more about how QR Codes work (Wikipedia)">
                     Learn more about QR Codes on Wikipedia
                 </HyperlinkButton>
 
